--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,16 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [main, develop]
+    paths: 
+      - 'stockGame-be/**'
+      - 'stockGame-fe/**'
+      - '.github/workflows/ci.yml'
   pull_request:
     branches: [main]
+    paths: 
+      - 'stockGame-be/**'
+      - 'stockGame-fe/**'
+      - '.github/workflows/ci.yml'
 
 jobs:
   test-backend:
