--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,12 +1,14 @@
 name: Deploy Frontend to GitHub Pages
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI/CD Pipeline"]
+    types: [completed]
     branches: [main]
-    paths: ['stockGame-fe/**', '.github/workflows/deploy-frontend.yml']
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -16,6 +18,20 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    
+    - name: Check if frontend files changed
+      id: changed-files
+      uses: tj-actions/changed-files@v44
+      with:
+        files: |
+          stockGame-fe/**
+          .github/workflows/deploy-frontend.yml
+    
+    - name: Skip deployment if no frontend changes
+      if: steps.changed-files.outputs.any_changed != 'true'
+      run: |
+        echo "No frontend files changed, skipping deployment"
+        exit 0
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
