fix: 프론트엔드 배포 문제 및 CORS 설정 개선

--- a/stockGame-be/.gitignore
+++ b/stockGame-be/.gitignore
@@ -146,3 +146,15 @@ temp/
 
 # Local Netlify folder
 .netlify
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Admin files
+admin.html
+
+# Build outputs
+dist/
+build/
