--- a/stockGame-be/vercel.json
+++ b/stockGame-be/vercel.json
@@ -3,11 +3,11 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/src/main.ts"
+      "dest": "/api/index.ts"
     }
   ],
   "functions": {
-    "src/main.ts": {
+    "api/index.ts": {
       "maxDuration": 30
     }
   }
