Fix build script for Vercel deployment

--- a/stockGame-be/package.json
+++ b/stockGame-be/package.json
@@ -10,14 +10,14 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "build": "npx --yes nest build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npx nest start",
-    "start:dev": "npx nest start --watch",
-    "start:debug": "npx nest start --debug --watch",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "vercel-build": "npm run build",
-    "vercel-dev": "npm run start:dev",
+    "vercel-build": "nest build",
+    "vercel-dev": "nest start:dev",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
