🔧 CI/CD 및 CORS 설정 정리
- CORS 설정 중복 제거 및 단순화
- CI/CD 워크플로우 수정 (자동 빌드 활성화)
- 불필요한 파일/코드 제거
- 배포 설정 통일 및 최적화
- Vercel CORS 헤더 설정 추가
- 환경 변수 예시 파일 생성
- 배포 가이드 문서 업데이트

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,4 +1,4 @@
-name: Deploy Backend to Railway
+name: Deploy Backend to Vercel
 
 on:
   workflow_run:
@@ -46,9 +46,11 @@ jobs:
         cd stockGame-be
         npm run build
     
-    - name: Build for Railway
-      run: |
-        echo "🚀 Backend build completed successfully!"
-        echo "📦 Ready for Railway deployment"
-        echo "🔑 Please deploy manually using Railway CLI or dashboard"
-        echo "💡 Command: railway up --service backend"
+    - name: Deploy to Vercel
+      uses: amondnet/vercel-action@v25
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-org-id: ${{ secrets.ORG_ID }}
+        vercel-project-id: ${{ secrets.PROJECT_ID }}
+        working-directory: ./stockGame-be
+        vercel-args: '--prod'
